[metadata]
name = acos-client
version = 0.2
summary = A10 Networks ACOS API Client
description-file =
    README.md
author = A10 Networks
author-email = dougw@a10networks.com
home-page = https://github.com/a10networks/acos-client
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    acos_client

